# ochre

./: .gitignore  .ocamlinit  README.md  foo.hs  foo.rs  main.ml
.devcontainer/: Dockerfile  devcontainer.json
agda/: playground.agda  playground.agdai
compiler/: Cargo.toml
compiler/compiler-macros/: Cargo.toml
compiler/compiler-macros/src/: abstract_.rs  ast.rs  drop_op.rs  erased_read_op.rs  erased_write_op.rs  lib.rs  max_op.rs  move_op.rs  narrow_op.rs  parser.rs  read_op.rs  write_op.rs
compiler/src/: main.rs  ochre.rs
language_investigation/haskell/: haskell.hs
report/aeneas/: comment.cut  ochre.pyg  ochre.tex  paper.bib  paper.tex
report/aeneas/_minted-paper/: listing1.pygtex  listing10.pygtex  listing11.pygtex  listing12.pygtex  listing13.pygtex  listing14.pygtex  listing15.pygtex  listing16.pygtex  listing17.pygtex  listing19.pygtex  listing2.pygtex  listing20.pygtex  listing22.pygtex  listing23.pygtex  listing24.pygtex  listing25.pygtex  listing26.pygtex  listing27.pygtex  listing28.pygtex  listing29.pygtex  listing3.pygtex  listing30.pygtex  listing31.pygtex  listing32.pygtex  listing33.pygtex  listing34.pygtex  listing35.pygtex  (+12 more)
report/interim/: ethan.tex  includes.tex  main.brf  main.tex  references.bib  titlepage.tex
report/presentation/: Lecture1.tex  charcoaltoothpaste.sty  slides.cls
report/thesis/: explanation.md  includes.tex  main.brf  main.pyg  main.synctex(busy)  main.tex  playground.tex  presentation.tex  references.bib
src/: analyser.ml  ast.ml  dune  eval.ml  main.ml  parser_.ml  parser_test.ml  scope.ml  test.ml
(+137 files in other folders)
