
workspace = { members = ["compiler-macros"] }

[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler-macros = { path = "./compiler-macros" }
nom = "7.1.3"
