(library
 (name parser_)
 (modules parser_)
 (libraries base stdio angstrom ast))

(test
 (name parser_test)
 (modules parser_test)
 (libraries qcheck ast parser_))

(library
 (name ast)
 (modules ast)
 (libraries base))

(library
 (name scope)
 (modules scope)
 (libraries base ast))

(library
 (name eval)
 (modules eval)
 (libraries base ast scope parser_))

(test
 (name test)
 (modules test)
 (libraries qcheck ast scope eval))

(env
 (_
  (flags
   (:standard -w -K))))
