[package]
name = "compiler-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "compiler_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
im-rc = "15.1.0"
nom = "7.1.3"
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = "2.0.65"
